--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.5'
+    //id 'org.openjfx.javafxplugin' version '0.0.5'
     id 'java'
 }
 
@@ -16,13 +16,22 @@ repositories {
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
-javafx {
-    version = "11.0.+"
-    modules = [ 'javafx.controls' ]
-    modules = [ 'javafx.fxml' ]
-}
+
+//javafx {
+//    version = "11.0.+"
+//    modules = [ 'javafx.fxml', 'javafx.controls' ]
+//}
+
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.fulib:fulib:1.0.+'
+
+    
+//    implementation "org.openjfx:javafx-base:11:${'win'}"
+//    implementation "org.openjfx:javafx-graphics:11:${'win'}"
+//    implementation "org.openjfx:javafx-controls:11:${'win'}"
+//    implementation "org.openjfx:javafx-fxml:11:${'win'}"
+//    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    
 }
