--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'application'
-    //id 'org.openjfx.javafxplugin' version '0.0.5'
     id 'java'
 }
 
@@ -9,7 +8,9 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
-mainClassName = 'eu.yeger.comaga.MainApp'
+application {
+    mainClassName = 'eu.yeger.comaga.MainApp'
+}
 
 repositories {
     mavenCentral()
@@ -17,21 +18,7 @@ repositories {
 }
 
 
-//javafx {
-//    version = "11.0.+"
-//    modules = [ 'javafx.fxml', 'javafx.controls' ]
-//}
-
-
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.fulib:fulib:1.0.+'
-
-    
-//    implementation "org.openjfx:javafx-base:11:${'win'}"
-//    implementation "org.openjfx:javafx-graphics:11:${'win'}"
-//    implementation "org.openjfx:javafx-controls:11:${'win'}"
-//    implementation "org.openjfx:javafx-fxml:11:${'win'}"
-//    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    
 }
