--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 plugins {
     id 'application'
     id 'java'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
 group 'eu.yeger'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 sourceCompatibility = 1.8
 
@@ -19,6 +21,14 @@ repositories {
 
 
 dependencies {
+    compile "org.openjfx:javafx-graphics:15:win"
+    compile "org.openjfx:javafx-graphics:15:linux"
+    compile "org.openjfx:javafx-graphics:15:mac"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.fulib:fulib:1.0.+'
+}
+
+javafx {
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media']
 }
